@@ -1,0 +1,4 @@
+#Wed May 12 10:54:48 CEST 2010
+eclipse.preferences.version=1
+groovy.compiler.output.path=bin-groovy
+support.groovy=true
